<package format="2">
    <name>example_ros_pkg</name>
    <version>0.0.1</version>
    <description>example_ros_pkg</description>
    <maintainer email="email@maintain.ner">maintainer</maintainer>
    <author email="email@auth.or">author</author>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- When using Python: -->
    <!-- <depend>rospy</depend> -->
    <!-- When using C++: -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nodelet</depend>
</package>
